<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagecovidlow"
            android:layout_width="match_parent"
            android:layout_height="220sp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/covid_low"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textcovidlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imagecovidlow"
            android:layout_alignTop="@+id/imagecovidlow"
            android:layout_alignRight="@+id/imagecovidlow"
            android:layout_alignBottom="@+id/imagecovidlow"
            android:gravity="center"
            android:text="@string/text_covid_low1"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textcovidlow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagecovidlow"
            android:paddingTop="30sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="@string/text_covid_low2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textcovidlow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textcovidlow1"
            android:gravity="center"
            android:paddingTop="100sp"
            android:text="@string/text_covid_low3"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textcovidlow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textcovidlow2"
            android:gravity="center"
            android:paddingTop="50sp"
            android:text="@string/text_covid_low4"
            android:textColor="#17c714"
            android:textSize="30sp" />


    </RelativeLayout>
</ScrollView>