<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagecovidhigh"
            android:layout_width="match_parent"
            android:layout_height="220sp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/covid_high"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textcovidhigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imagecovidhigh"
            android:layout_alignTop="@+id/imagecovidhigh"
            android:layout_alignRight="@+id/imagecovidhigh"
            android:layout_alignBottom="@+id/imagecovidhigh"
            android:gravity="center"
            android:text="@string/text_covid_high1"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textcovidhigh1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagecovidhigh"
            android:paddingTop="30sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:text="@string/text_covid_high2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textcovidhigh2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textcovidhigh1"
            android:gravity="center"
            android:paddingTop="100sp"
            android:text="@string/text_covid_high3"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textcovidhigh3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textcovidhigh2"
            android:gravity="center"
            android:paddingTop="50sp"
            android:text="@string/text_covid_high4"
            android:textColor="#c71414"
            android:textSize="30sp" />


    </RelativeLayout>
</ScrollView>